fixed week dropdown overlapping navbar when on a mobile screen

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -91,6 +91,7 @@ nav {
 
   #navbar.active {
     right: 0px;
+    z-index: 5;
   }
 
   #navbar li {
